2010-06-03  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/InsertionCursorEditMode.cs: Don't start
	  insertion cursor mode without insertion points.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/SelectionActions.cs: Fixed virtual space
	  drawing.

2010-06-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActions.cs: Fix navigation in visual
	  mode.

	* Mono.TextEditor/SelectionActions.cs: Fix pivot around origin
	  for line selection actions.

2010-06-02  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/InsertionCursorEditMode.cs: Corrected
	  indenting of insertion.

2010-06-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Fix tests.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/InsertionCursorEditMode.cs: Worked on
	  insertion cursor mode.

2010-06-01  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/InsertionCursorEditMode.cs: Worked on
	  insertioncursoreditmode.

2010-06-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Reset on external caret change
	  if not in insert/replace mode.

2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Better handling of '*'.

2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Improve testability. Fix dd
	  and cc behaviour.

	* Mono.TextEditor/EditMode.cs: Made RunActions take params,
	  not just two.

2010-05-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViActionMaps.cs: New EditObject map for
	  'c' to use word start/end instead of word navigation
	  boundaries.

	* Mono.TextEditor/EmacsWordFindStrategy.cs:
	* Mono.TextEditor.Vi/ViWordFindStrategy.cs:
	* Mono.TextEditor/SharpDevelopWordFindStrategy.cs: Move code
	  to abstract base class.
