@@ -1,3 +1,9 @@
+2010-06-04  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
+	* Mono.TextEditor.Highlighting/JaySyntaxMode.cs: Fixed syntax
+	  highlighting bug.
+
 2010-06-03  Mike Krüger  <mkrueger@novell.com>
 
 	* Mono.TextEditor/InsertionCursorEditMode.cs: Don't start
